# BackPropCore

./: .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
backpropcore/layers/: _dense.pyx  dense.py
backpropcore/model/: _model.hpp  _model.pyx  model.py
include/backpropcore/misc/: log.hpp  progressbar.hpp
include/backpropcore/model/: model.hpp
